--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.output.ansi.enabled=DETECT
-server.port = 8000
-
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.datasource.url=jdbc:sqlite:info.db
-spring.datasource.driver-class-name = org.sqlite.JDBC
-spring.jpa.database-platform=com.boylegu.springboot_vue.config.SQLiteDialect
-spring.jpa.show-sql= true
+spring.application.name=springboot-mvvm-vue
+server.port=8000
+spring.datasource.url=jdbc:mysql://localhost:3306/mytest
+spring.datasource.username=root
+spring.datasource.password=2772853w
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 com.boylegu.paginatio.max-per-page=7
 
@@ -32,7 +31,7 @@ log4j.appender.errorfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.errorfile.Threshold = ERROR
 log4j.appender.errorfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.errorfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
-        
+
 log4j.appender.didifile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.didifile.file=logs/gubaoer.log
 log4j.appender.didifile.DatePattern='.'yyyy-MM-dd
